--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     >Pickaxe</button>
                     <button style="--buttonBg: var(--red);" onclick="
                     openComic(
-                        'comics/untitled44/Pink.png',
+                        'comics/untitled44/pink.png',
                         'Untitled44 - Pink',
                         'Untitled44 is a comic series about a wolf child that is forced to suffer.',
                     )"
